--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>html5动画电子生日贺卡特效 - 站长素材</title>
+  <title>来自程序猿的祝福</title>
 
   <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
   <script src="js/shine-text.js"></script>
