--- a/index.html
+++ b/index.html
@@ -481,9 +481,9 @@ window.onload = loop;
 
 <audio autoplay="autoplay" loop="loop" preload="auto" src="http://www.17sucai.com/preview/3630/2013-06-27/ruguomeiyouni.mp3" type="audio/wav"></audio>
 <div>
-    <p id="title">
+<!--     <p id="title">
     Happy Birthday 嘻嘻Z
-    </p>
+    </p> -->
 	<br />
 	<p id="message">
 	Have a great day, for today is your birthday and a wonderful event. Wish you happiness unfolding like the petal of a rose.<br />
