--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>来自程序猿的祝福</title>
 
-  <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
+<!--   <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" /> -->
   <script src="js/shine-text.js"></script>
 </head>
 
@@ -250,7 +250,7 @@
 </svg>
 
 <div>
-    <p>
+    <p id="title">
     Happy Birthday 嘻嘻Z
     </p>
 <!-- 	<br />
@@ -481,7 +481,7 @@ window.onload = loop;
 
 <audio autoplay="autoplay" loop="loop" preload="auto" src="http://ip.h5.nf01.sycdn.kuwo.cn/3328e1f0defb9515b15aeb2e2b74c7a0/5e440186/resource/n3/14/22/1811878369.mp3" type="audio/wav"></audio>
 <div>
-<!--     <p id="title">
+<!--     <p >
     Happy Birthday 嘻嘻Z
     </p> -->
 	<br />
