--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>来自程序猿的祝福</title>
 
-<!--   <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" /> -->
+  <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
   <script src="js/shine-text.js"></script>
 </head>
 
