--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ canvas.addEventListener( 'mouseup', function( e ) {
 window.onload = loop;
 </script>
 
-<audio autoplay="autoplay" loop="loop" preload="auto" src="http://ip.h5.nf01.sycdn.kuwo.cn/3328e1f0defb9515b15aeb2e2b74c7a0/5e440186/resource/n3/14/22/1811878369.mp3" type="audio/wav"></audio>
+<audio autoplay="autoplay" loop="loop" preload="auto" src="1.mp3" type="audio/wav"></audio>
 
 <div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';color:#ffffff">
 
